--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "google-search-console-mcp",
     "version": "0.1.0",
     "description": "MCP server for Google Search Console",
+    "type": "module",
     "main": "build/index.js",
     "scripts": {
         "build": "tsc",
@@ -22,6 +23,7 @@
         "express": "^5.2.1",
         "googleapis": "^144.0.0",
         "server-destroy": "^1.0.1",
+        "uuid": "^13.0.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
@@ -29,6 +31,7 @@
         "@types/express": "^5.0.6",
         "@types/node": "^22.9.0",
         "@types/server-destroy": "^1.0.4",
+        "@types/uuid": "^10.0.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.3"
     }
